--- a/static/src/css/sass/airbnb-core.scss
+++ b/static/src/css/sass/airbnb-core.scss
@@ -1,7 +1,8 @@
 .collection-type-separator {
   color: #777;
   font-size: 14px;
-  margin: 10px;
+  margin: 4px;
   float: left;
   width: 100%;
+  padding-top: 15px;
 }
