Preferential edit category

--- a/static/src/css/sass/airbnb-core.scss
+++ b/static/src/css/sass/airbnb-core.scss
@@ -56,3 +56,10 @@ section {
             }
     }
 }
+
+// Issues Panel
+.re-item.re-category-item.severity-buttons.PRE {
+  border-top: 3px solid #e5e9f1;
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
